--- a/index.html
+++ b/index.html
@@ -19,45 +19,31 @@
 </main>
 <footer class="history">
     <div class="history__header">
-        <div class="step-number">#</div>
-        <div class="player player-name">Батон</div>
-        <div class="player player-name">Доброжир</div>
+        <div class="player-name">Батон</div>
+        <div class="player-name">Доброжир</div>
     </div>
-    <div class="history__body">
-        <div class="step">
-            <div class="step-number">1</div>
-            <div class="player player1-step">
-                <div class="dice1-result">1</div>
-                <div class="dice2-result">1</div>
+    <ul class="history__body">
+        <li class="step">
+            <div class="player">
+                <div class="dice1">0</div>
+                <div class="dice2">0</div>
             </div>
-            <div class="player player2-step">
-                <div class="dice1-result">1</div>
-                <div class="dice2-result">1</div>
+            <div class="player">
+                <div class="dice1">0</div>
+                <div class="dice2">0</div>
             </div>
-        </div>
-        <div class="step">
-            <div class="step-number">2</div>
-            <div class="player player1-step">
-                <div class="dice1-result">1</div>
-                <div class="dice2-result">1</div>
+        </li>
+        <li class="step">
+            <div class="player">
+                <div class="dice1">0</div>
+                <div class="dice2">0</div>
             </div>
-            <div class="player player2-step">
-                <div class="dice1-result">1</div>
-                <div class="dice2-result">1</div>
+            <div class="player">
+                <div class="dice1">0</div>
+                <div class="dice2">0</div>
             </div>
-        </div>
-        <div class="step">
-            <div class="step-number">3</div>
-            <div class="player player1-step">
-                <div class="dice1-result">1</div>
-                <div class="dice2-result">1</div>
-            </div>
-            <div class="player player2-step">
-                <div class="dice1-result">1</div>
-                <div class="dice2-result">1</div>
-            </div>
-        </div>
-    </div>
+        </li>
+    </ul>
 </footer>
 <button class="reset">Reset</button>
 
