added double dice style

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     </div>
   </main>
   <footer class="history">
+    <div class="controls">
+      <div class="control" id="back">Back</div>
+      <div class="control" id="reset">Reset</div>
+    </div>
     <div class="history__header">
       <div class="player-sum">0</div>
       <div class="player-sum">0</div>
@@ -35,8 +39,8 @@
       </li>
     </ul>
   </footer>
-  <button id="back">Back</button>
-  <button id="reset">Reset</button>
+
+
 
   <script src="script.js"></script>
   </body>
